<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<HorizontalScrollView
			android:layout_height="wrap_content"
			android:layout_width="match_parent">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:padding="5dp"
				android:id="@+id/storiesList"/>

		</HorizontalScrollView>

	</LinearLayout>

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center_vertical|center_horizontal"
		android:layout_weight="1.0">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/hint"
			android:gravity="center"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<Button
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/music"
				android:background="#5181B8"
				android:textColor="#FFFFFF"
				android:onClick="github"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/findByLink"
				android:layout_weight="1.0"
				android:background="#FFFFFF"
				android:textColor="#5181B8"
				android:onClick="openSearch"/>

			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/pda"
				android:layout_weight="1.0"
				android:background="#FFFFFF"
				android:textColor="#5181B8"
				android:onClick="forum"/>

			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/vkGroup"
				android:layout_weight="1.0"
				android:background="#FFFFFF"
				android:textColor="#5181B8"
				android:onClick="vkgroup"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<Button
				android:layout_height="35dp"
				android:layout_width="match_parent"
				android:text="@string/logout"
				android:background="#E64646"
				android:textColor="#FFFFFF"
				android:onClick="logout"
				android:textSize="10sp"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

